Bug 24688 - Regression in EPS output
Summary: Regression in EPS output
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.9.5
Hardware: All All
: medium normal
Assignee: Chris Wilson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: cairo-1.10
  Show dependency treegraph
 
Reported: 2009-10-23 04:19 UTC by Adrian Johnson
Modified: 2010-11-20 06:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Adrian Johnson 2009-10-23 04:19:56 UTC
The ps-eps.c test in the test suite is showing a regression in 1.9.5 compared with 1.8.8.

There are two problems:
- There is no page content in the 1.9.5 output. A blank page is displayed in a PS viewer.
- The Bounding box specified in the %%BoundingBox comment is no longer "the smallest rectangle enclosing all marks on the page" as required by the EPS specification.

Note: as this test is not in 1.8.8 it needs to be manually with 1.8.8 compiled to check the result with 1.8.8. The ps-eps.ref.eps output was created with 1.8.8.
Comment 1 Adrian Johnson 2010-11-20 06:22:50 UTC
Fixed in
d3746448d78fcedf8f8f9a7d0fca47f1bd6a5b67 and 	bb4055dac6a937b3412170a332b5effe4bbeff7d


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.