PS: Fix regression - missing page content in EPS output

https://bugs.freedesktop.org/show_bug.cgi?id=24688
(cherry picked from commit d3746448d78fcedf8f8f9a7d0fca47f1bd6a5b67)